@@ -184,8 +184,8 @@ public class CacheUtil {
 		info.setEL("last_hit", ce.lastHit());
 		info.setEL("last_modified", ce.lastModified());
 
-		info.setEL("hit_count", new Double(ce.hitCount()));
-		info.setEL(KeyConstants._size, new Double(ce.size()));
+		info.setEL("hit_count", Double.valueOf(ce.hitCount()));
+		info.setEL(KeyConstants._size, Double.valueOf(ce.size()));
 
 		info.setEL("idle_time_span", toTimespan(ce.idleTimeSpan()));
 		info.setEL("live_time_span", toTimespan(ce.liveTimeSpan()));
@@ -201,7 +201,7 @@ public class CacheUtil {
 		if (info == null) info = new StructImpl();
 		try {
 			long value = c.hitCount();
-			if (value >= 0) info.setEL("hit_count", new Double(value));
+			if (value >= 0) info.setEL("hit_count", Double.valueOf(value));
 		}
 		catch (IOException ioe) {
 			// simply ignore
@@ -209,7 +209,7 @@ public class CacheUtil {
 
 		try {
 			long value = c.missCount();
-			if (value >= 0) info.setEL("miss_count", new Double(value));
+			if (value >= 0) info.setEL("miss_count", Double.valueOf(value));
 		}
 		catch (IOException ioe) {
 			// simply ignore
