@@ -166,7 +166,7 @@ public final class ZEval {
 				Object obj1 = ztuple.getAttValue(zconstant.getValue());
 				if (obj1 == null) throw new SQLException("ZEval.evalExpValue(): unknown column " + zconstant.getValue());
 				try {
-					obj = new Double(obj1.toString());
+					obj = Double.valueOf(obj1.toString());
 				}
 				catch (NumberFormatException numberformatexception) {
 					obj = obj1;
@@ -174,7 +174,7 @@ public final class ZEval {
 				break;
 
 			case 2: // '\002'
-				obj = new Double(zconstant.getValue());
+				obj = Double.valueOf(zconstant.getValue());
 				break;
 
 			case 1: // '\001'
@@ -184,7 +184,7 @@ public final class ZEval {
 				break;
 			}
 		}
-		else if (zexp instanceof ZExpression) obj = new Double(evalNumericExp(ztuple, (ZExpression) zexp));
+		else if (zexp instanceof ZExpression) obj = Double.valueOf(evalNumericExp(ztuple, (ZExpression) zexp));
 		return obj;
 	}
 
